--- a/solution-hw1/css/style.css
+++ b/solution-hw1/css/style.css
@@ -5,3 +5,27 @@ body{
 .logo{
     width: 400px;
 }
+
+.line{
+    height: 3px;
+    background-color: black;
+}
+
+.nav{
+    text-align: center;
+    font-size: 20px;
+}
+
+.list-title{
+    text-align: center;
+    font-size: 25px
+}
+
+.product-img{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    height: 400px;
+    width: 400px;
+    border: 3px solid black;
+}
