--- a/solution-hw1/css/style.css
+++ b/solution-hw1/css/style.css
@@ -1,5 +1,11 @@
+*{
+    box-sizing: border-box;
+}
+
 body{
     font-family:Arial, Helvetica, sans-serif;
+    background-color: white;
+    font-weight:300;
 }
 
 .logo{
@@ -16,18 +22,33 @@ body{
     font-size: 20px;
 }
 
+#products-nav:hover{
+    background-color: yellow; 
+    font-weight: 900;
+}
+
+#cart-nav:hover{
+    background-color: yellow; 
+    font-weight: 900;
+}
+
 .list-title{
     text-align: center;
     font-size: 25px
 }
 
 .product-list{
+    width: 400px;
     margin-left: auto;
     margin-right: auto;
 }
 
-.product-img{
+.product-link:hover{
+    background-color: yellow;
     display: block;
+}
+
+.product-img{
     margin-left: auto;
     margin-right: auto;
     height: 400px;
@@ -35,8 +56,10 @@ body{
     border: 3px solid black;
 }
 
+
 .product-name{
-    display: block;
     font-size: 20px;
-    margin-left: auto;
+    margin: 0;
+    padding: 0;
 }
+
