--- a/solution-hw1/css/style.css
+++ b/solution-hw1/css/style.css
@@ -8,6 +8,11 @@ body{
     font-weight:300;
 }
 
+a{
+    text-decoration: none;
+    color: black;
+}
+
 .logo{
     width: 400px;
 }
@@ -20,10 +25,14 @@ body{
 .nav{
     text-align: center;
     font-size: 20px;
-    text-decoration: none;
 }
 
 #products-nav:hover{
+    background-color: yellow; 
+    font-weight: 900;
+}
+
+#products-nav:active{
     background-color: yellow; 
     font-weight: 900;
 }
@@ -59,6 +68,7 @@ body{
 
 .product-name{
     font-size: 20px;
+    text-decoration: underline;
 }
 
 .product-link:hover>.product-name{
@@ -67,4 +77,66 @@ body{
 
 .product-price{
     font-size: 20px;
+}
+
+/* Cart page */ 
+
+#cart-title{
+    text-align: center;
+    font-size: 30px;
+}
+
+.cart-img{
+    width: 200px;
+    height: 200px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    border: 3px solid black;
+}
+
+.remove{
+    text-align: center;
+    font-size: 15px;
+    font-weight: 900;
+    text-decoration: underline;
+}
+
+.cart-details{
+    text-align: center;
+    font-size: 20px;
+}
+
+.cart-price{
+    text-align: center;
+    font-size: 20px;
+}
+
+/* Product Details page */ 
+#detail-title{
+    text-align: center;
+    font-size: 30px;
+}
+
+#detail-img{
+    width: 600px;
+    height: 600px;
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
+    border: 3px solid black; 
+}
+
+.detail-desc{
+    text-align: center;
+    font-size: 20px;
+}
+
+.glaze-menu{
+    text-align: center;
+    margin-bottom: 50px;
+}
+
+.pack-menu{
+    text-align: center;
 }
