--- a/solution-hw1/css/style.css
+++ b/solution-hw1/css/style.css
@@ -22,9 +22,37 @@ a{
     background-color: black;
 }
 
+/* new nav */
+nav{
+    font-size: 25px;
+    text-align: center;
+}
+
+.products-nav:hover{
+    background-color: yellow;
+    font-weight: 900;
+}
+
+.cart-nav:hover{
+    background-color: yellow;
+    font-weight: 900;
+}
+
+.on-page{
+    background-color: yellow;
+    font-weight: 900;
+}
+
+#nav-br{
+    display: block;
+    margin-top: 50px;
+}
+
+/* nav bar */
+/*
 .in-products-nav{
     text-align: center;
-    font-size: 20px;
+    font-size: 25px;
 }
 
 #yellow-products-nav{
@@ -39,7 +67,7 @@ a{
 
 .in-cart-nav{
     text-align: center;
-    font-size: 20px;
+    font-size: 25px;
 }
 
 #yellow-cart-nav{
@@ -51,16 +79,25 @@ a{
     background-color: yellow; 
     font-weight: 900;
 }
+*/
+/* nav bar end */
 
 .list-title{
     text-align: center;
-    font-size: 25px
+    font-size: 40px;
+    font-weight: 300;
+    margin-top: 80px;
+    margin-bottom: 60px;
 }
 
 .product-list{
-    width: 400px;
-    margin-left: auto;
-    margin-right: auto;
+    width: 420px;
+    margin: auto;
+}
+
+.product-link{
+    display: block;
+    padding-top: 10px;
 }
 
 .product-link:hover{
@@ -69,16 +106,21 @@ a{
 }
 
 .product-img{
-    margin-left: auto;
-    margin-right: auto;
     height: 400px;
     width: 400px;
     border: 3px solid black;
+    display: block;
+    margin: auto;
 }
 
 .product-name{
-    font-size: 20px;
+    font-size: 25px;
     text-decoration: underline;
+    width: 400px;
+    margin-top: 5px;
+    margin-bottom: 0;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .product-link:hover>.product-name{
@@ -86,7 +128,12 @@ a{
 }
 
 .product-price{
-    font-size: 20px;
+    font-size: 25px;
+    margin-top: 5px;
+    margin-bottom: 50px;
+    width: 400px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 /* Cart page */ 
@@ -129,8 +176,8 @@ a{
 }
 
 #detail-img{
-    width: 600px;
-    height: 600px;
+    width: 400px;
+    height: 400px;
     display: block;
     margin-right: auto;
     margin-left: auto;
