--- a/solution-hw1/css/style.css
+++ b/solution-hw1/css/style.css
@@ -17,14 +17,14 @@ a{
     width: 400px;
 }
 
-.line{
-    height: 3px;
+#logo-line{
+    height: 6px;
     background-color: black;
 }
 
 /* new nav */
 nav{
-    font-size: 25px;
+    font-size: 30px;
     text-align: center;
 }
 
@@ -42,51 +42,13 @@ nav{
     background-color: yellow;
     font-weight: 900;
 }
+/* new nav end */
 
-#nav-br{
-    display: block;
-    margin-top: 50px;
-}
-
-/* nav bar */
-/*
-.in-products-nav{
-    text-align: center;
-    font-size: 25px;
-}
-
-#yellow-products-nav{
-    background-color: yellow; 
-    font-weight: 900;
-}
-
-#cart-nav:hover{
-    background-color: yellow; 
-    font-weight: 900;
-}
-
-.in-cart-nav{
-    text-align: center;
-    font-size: 25px;
-}
-
-#yellow-cart-nav{
-    background-color: yellow; 
-    font-weight: 900;
-}
-
-#products-nav:hover{
-    background-color: yellow; 
-    font-weight: 900;
-}
-*/
-/* nav bar end */
-
-.list-title{
+#list-title{
     text-align: center;
     font-size: 40px;
     font-weight: 300;
-    margin-top: 80px;
+    margin-top: 110px;
     margin-bottom: 60px;
 }
 
@@ -140,7 +102,10 @@ nav{
 
 #cart-title{
     text-align: center;
-    font-size: 30px;
+    font-size: 40px;
+    font-weight: 300;
+    margin-top: 110px;
+    margin-bottom: 60px;
 }
 
 .cart-img{
@@ -161,18 +126,61 @@ nav{
 
 .cart-details{
     text-align: center;
-    font-size: 20px;
+    font-size: 25px;
+    margin-top: 0;
+    margin-bottom: 0;
 }
 
 .cart-price{
     text-align: center;
-    font-size: 20px;
+    font-size: 30px;
+}
+
+#double-choc-cart{
+    margin-top: 130px;
+    margin-bottom: 70px;
+}
+
+#cart-bottom{
+    width: 70%;
+    height: 6px;
+    background-color: black;
+}
+
+#total-price{
+    text-align: center;
+    font-size: 35px;
+}
+
+#checkout-btn{
+    display: block;
+    margin: auto;
+    text-align: center;
+    width: auto;
+    height: auto;
+
+    font-size: 28px;
+    font-weight: 700;
+    color: black;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 25px;
+    padding-right: 25px;
+
+    background-color: yellow;
+    border: 5px solid black;
+    border-radius: 0;
+
+    margin-bottom: 200px;
 }
 
 /* Product Details page */ 
 #detail-title{
     text-align: center;
-    font-size: 30px;
+    font-size: 40px;
+    font-weight: 300;
+    margin-top: 110px;
+    margin-bottom: 60px;
 }
 
 #detail-img{
@@ -184,16 +192,64 @@ nav{
     border: 3px solid black; 
 }
 
-.detail-desc{
-    text-align: center;
+.detail-box{
+    width:250px;
+    margin: auto;
+}
+
+.roll-desc{
+    text-align: left;
+    font-size: 20px;
+    margin-top: 20px;
+    margin-bottom: 50px;
+}
+
+.menu-label{
     font-size: 20px;
 }
 
 .glaze-menu{
-    text-align: center;
-    margin-bottom: 50px;
+    text-align: left;
+    margin-bottom: 30px;
 }
 
 .pack-menu{
+    text-align: left;
+    margin-bottom: 60px;
+}
+
+#glazing{
+    font-size:20px;
+    width: auto;
+}
+
+#pack-size{
+    font-size: 20px;
+    width: auto;
+}
+
+.roll-price{
+    display: inline;
+    font-size: 20px;
+    font-weight: 700;
+    margin-right: 15%;
+}
+
+#add-cart-btn{
     text-align: center;
+    width: auto;
+    height: auto;
+
+    font-size: 20px;
+    font-weight: 700;
+    color: black;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
+
+    background-color: yellow;
+    border: 3px solid black;
+    border-radius: 0;
+    margin-bottom: 500px;
 }
