--- a/solution-hw2/css/style.css
+++ b/solution-hw2/css/style.css
@@ -13,19 +13,35 @@ a{
     color: black;
 }
 
+/* header */
+
+header{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+}
+
 .logo{
     width: 400px;
 }
 
-#logo-line{
-    height: 6px;
-    background-color: black;
+.header-right{
+    display: flex;
+    flex-direction: column;
+    flex-grow: 3;
+    justify-content: space-around;
 }
 
 /* new nav */
 nav{
     font-size: 30px;
     text-align: center;
+    align-self: flex-end;
+    padding-right: 60px;
+
+    display: flex;
+    gap: 50px;
 }
 
 .products-nav:hover{
@@ -44,13 +60,20 @@ nav{
 }
 /* new nav end */
 
+#logo-line{
+    height: 6px;
+    width: 100%;
+    background-color: black;
+}
+
 #list-title{
     text-align: center;
-    font-size: 40px;
+    font-size: 25px;
     font-weight: 300;
-    margin-top: 110px;
-    margin-bottom: 60px;
+    align-self: flex-start;
 }
+
+/* header end */
 
 .product-list{
     width: 420px;
