--- a/solution-hw2/css/style.css
+++ b/solution-hw2/css/style.css
@@ -20,6 +20,7 @@ header{
     display: flex;
     flex-direction: row;
     gap: 20px;
+    margin-bottom: 70px;
 }
 
 .logo{
@@ -39,9 +40,6 @@ nav{
     text-align: center;
     align-self: flex-end;
     padding-right: 60px;
-
-    display: flex;
-    gap: 50px;
 }
 
 .products-nav:hover{
@@ -57,6 +55,16 @@ nav{
 .on-page{
     background-color: yellow;
     font-weight: 900;
+}
+
+.cart-badge{
+    background-color: red;
+    color: white; 
+    text-align: center;
+    font-size: 20px;
+    border-radius: 50px;
+    padding: 9px 5px;
+    vertical-align: super; 
 }
 /* new nav end */
 
@@ -76,13 +84,19 @@ nav{
 /* header end */
 
 .product-list{
-    width: 420px;
-    margin: auto;
+    margin-left: 100px;
+    margin-right: 100px; 
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+    justify-content: center;
 }
 
 .product-link{
     display: block;
-    padding-top: 10px;
+    width: auto;
+    padding: 10px;
+    /*background-color: rgb(124, 124, 211);*/
 }
 
 .product-link:hover{
@@ -90,9 +104,12 @@ nav{
     display: block;
 }
 
+.link-content{
+    width: 285px;
+}
 .product-img{
-    height: 400px;
-    width: 400px;
+    height: 285px;
+    width: 285px;
     border: 3px solid black;
     display: block;
     margin: auto;
@@ -101,11 +118,11 @@ nav{
 .product-name{
     font-size: 25px;
     text-decoration: underline;
-    width: 400px;
     margin-top: 5px;
     margin-bottom: 0;
     margin-left: auto;
     margin-right: auto;
+    text-wrap: wrap;
 }
 
 .product-link:hover>.product-name{
@@ -115,48 +132,61 @@ nav{
 .product-price{
     font-size: 25px;
     margin-top: 5px;
-    margin-bottom: 50px;
     width: 400px;
     margin-left: auto;
     margin-right: auto;
 }
 
 /* Cart page */ 
-
-#cart-title{
-    text-align: center;
-    font-size: 40px;
-    font-weight: 300;
-    margin-top: 110px;
-    margin-bottom: 60px;
+.cart-container{
+    margin-left: auto;
+    margin-right: 90px;
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    /*background-color: rgb(152, 152, 201);*/
 }
 
+.cart-item{ /*entire row of one item*/
+    display: flex;
+    flex-direction: column;
+    width: auto;
+}
+
+.cart-item-info{ /*contains img, roll details, and price*/
+    display: flex;
+    gap: 30px;
+    justify-content: space-between;
+}
+
+/* inside info box */
 .cart-img{
     width: 200px;
     height: 200px;
     display: block;
-    margin-left: auto;
-    margin-right: auto;
     border: 3px solid black;
 }
 
-.remove{
-    text-align: center;
-    font-size: 15px;
-    font-weight: 900;
-    text-decoration: underline;
-}
-
-.cart-details{
-    text-align: center;
-    font-size: 25px;
-    margin-top: 0;
-    margin-bottom: 0;
+.cart-details{ /*roll name, glazing, pack size*/
+    font-size: 20px;
+    text-align: left;
+    vertical-align: top;
+    flex-grow: 1;
+    border: 3px solid black;
 }
 
 .cart-price{
-    text-align: center;
-    font-size: 30px;
+    text-align: right;
+    /*vertical-align: center;*/
+    font-size: 25px;
+    border: 3px solid black;
+}
+/* end of info box */
+
+.cart-item-remove{ 
+    font-size: 25px;
+    font-weight: 900;
+    text-decoration: underline;
 }
 
 #double-choc-cart{
