--- a/solution-hw2/css/style.css
+++ b/solution-hw2/css/style.css
@@ -165,21 +165,21 @@ nav{
 }
 
 /* inside info box */
-.cart-img{
+.cart-item-img{
     width: 200px;
     height: 200px;
     /*display: block;*/
     border: 3px solid black;
 }
 
-.cart-details{ /*roll name, glazing, pack size*/
+.cart-item-details{ /*roll name, glazing, pack size*/
     font-size: 20px;
     text-align: left;
     flex-grow: 1;
     /*border: 3px solid black;*/
 }
 
-.cart-price{
+.cart-item-price{
     text-align: right;
     font-size: 20px;
     /*border: 3px solid black;*/
@@ -188,7 +188,7 @@ nav{
 /* end of info box */
 
 .cart-item-remove{ 
-    font-size: 25px;
+    font-size: 20px;
     font-weight: 900;
     text-decoration: underline;
 }
@@ -198,36 +198,46 @@ nav{
     margin-bottom: 70px;
 }
 
-/* formatting for content underneath cart */
+/* formatting for content underneath cart items */
 
-#cart-bottom{
-    width: 70%;
+#cart-bottom-line{
+    width: 100%;
     height: 6px;
     background-color: black;
 }
 
-#total-price{
-    text-align: center;
-    font-size: 35px;
+.total-price-container{
+    display: flex;
+    font-size: 20px;
+    justify-content: space-between;
+    text-align: right;
+    /*background-color: rgb(181, 181, 245);*/
 }
 
-#checkout-btn{
-    display: block;
-    margin: auto;
+.total-text{
+    width: 35%;
+}
+/*
+.total-price-text{
+    border: 3px solid black; 
+}*/
+
+.checkout-btn{
+    margin-left: auto;
     text-align: center;
     width: auto;
     height: auto;
 
-    font-size: 28px;
+    font-size: 20px;
     font-weight: 700;
     color: black;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding-top: 20px;
+    padding-bottom: 20px;
     padding-left: 25px;
     padding-right: 25px;
 
     background-color: yellow;
-    border: 5px solid black;
+    border: 2px solid black;
     border-radius: 0;
 }
 
