--- a/solution-hw2/css/style.css
+++ b/solution-hw2/css/style.css
@@ -242,64 +242,72 @@ nav{
 }
 
 /* Product Details page */ 
-#detail-title{
-    text-align: center;
-    font-size: 40px;
-    font-weight: 300;
-    margin-top: 110px;
-    margin-bottom: 60px;
+.product-detail-container{ /* main container for all product detail information */
+    display: flex;
+    width: 80%;
+    margin: auto;
+    gap: 20px;
+    align-items: stretch;  
 }
 
-#detail-img{
-    width: 400px;
-    height: 400px;
-    display: block;
-    margin-right: auto;
-    margin-left: auto;
+.detail-img{
+    width: 600px;
+    height: 600px;
     border: 3px solid black; 
 }
 
-.detail-box{
-    width:250px;
-    margin: auto;
+.detail-container{ /* all text next to img inside here*/
+    width: 30%;
+    display: flex;
+    flex-direction: column; 
+    justify-content: space-between;
 }
 
 .roll-desc{
     text-align: left;
     font-size: 20px;
-    margin-top: 20px;
-    margin-bottom: 50px;
 }
 
+/* dropdown options styling */
 .menu-label{
     font-size: 20px;
+    line-height: 320%;
 }
 
 .glaze-menu{
-    text-align: left;
     margin-bottom: 30px;
+    text-align: left;
 }
 
 .pack-menu{
     text-align: left;
-    margin-bottom: 60px;
 }
 
 #glazing{
     font-size:20px;
-    width: auto;
+    width: 100%;
+    padding: 5px;
 }
 
 #pack-size{
     font-size: 20px;
-    width: auto;
+    width: 100%;
+    padding: 5px;
+}
+/* dropdown options styling end */
+
+.price-to-cart{
+    display: flex;
+    justify-content: flex-end;
+    align-items: baseline;
+    padding-right: 5px;
+    gap: 25px;
 }
 
 .roll-price{
-    display: inline;
+    margin-bottom: 0;
     font-size: 20px;
     font-weight: 700;
-    margin-right: 15%;
 }
 
 #add-cart-btn{
@@ -312,10 +320,12 @@ nav{
     color: black;
     padding-top: 10px;
     padding-bottom: 10px;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-left: 30px;
+    padding-right: 30px;
 
     background-color: yellow;
-    border: 3px solid black;
+    border: 2px solid black;
     border-radius: 0;
 }
+
+/* end of detail container */
