--- a/solution-hw2/css/style.css
+++ b/solution-hw2/css/style.css
@@ -66,7 +66,7 @@ nav{
     color: white; 
     text-align: center;
     font-size: 20px;
-    border-radius: 50px;
+    border-radius: 50%;
     padding: 9px 5px;
     vertical-align: super; 
 }
