--- a/solution-hw2/css/style.css
+++ b/solution-hw2/css/style.css
@@ -30,7 +30,7 @@ header{
 .header-right{
     display: flex;
     flex-direction: column;
-    flex-grow: 3;
+    flex-grow: 2;
     justify-content: space-around;
 }
 
@@ -88,8 +88,9 @@ nav{
 /* header end */
 
 .product-list{
-    margin-left: 100px;
-    margin-right: 100px; 
+    /* margin-left: 100px;
+    margin-right: 100px; */
+    margin: auto;
     display: flex;
     flex-wrap: wrap;
     gap: 30px;
@@ -120,10 +121,8 @@ nav{
 }
 
 .product-name{
-    font-size: 25px;
+    font-size: 20px;
     text-decoration: underline;
-    margin-top: 5px;
-    margin-bottom: 0;
     margin-left: auto;
     margin-right: auto;
     text-wrap: wrap;
@@ -134,7 +133,7 @@ nav{
 }
 
 .product-price{
-    font-size: 25px;
+    font-size: 20px;
     margin-top: 5px;
     width: 400px;
     margin-left: auto;
