--- a/solution-hw2/css/style.css
+++ b/solution-hw2/css/style.css
@@ -122,7 +122,7 @@ nav{
     text-decoration: underline;
     margin-left: auto;
     margin-right: auto;
-    text-wrap: wrap;
+    word-wrap: normal;
 }
 
 .product-link:hover .product-name{ 
