--- a/solution-hw5/css/style.css
+++ b/solution-hw5/css/style.css
@@ -177,7 +177,7 @@ nav{
     /*border: 3px solid black;*/
 }
 
-.cart-item-price{
+#cart-item-price{
     text-align: right;
     font-size: 20px;
     padding-top: 50px;
@@ -185,11 +185,18 @@ nav{
 }
 /* end of info box */
 
-.cart-item-remove{ 
+#item-remove-btn{ 
     font-size: 20px;
     font-weight: 900;
     text-decoration: underline;
-}
+
+    background-color: white;
+    border: 0;
+    padding: 0;
+
+    margin-top: 20px;
+    margin-bottom: 20px;
+} 
 
 /* formatting for content underneath cart items */
 
